ER-615: Fixed reservation delete on mobile

--- a/sites/all/themes/wille/sass/component/_user.scss
+++ b/sites/all/themes/wille/sass/component/_user.scss
@@ -508,12 +508,15 @@ input.password-confirm, input.password-field {
   // "Delete selected reservations" button.
   .pane-reservations .delete-reservations.action-button {
     // Make "Reservations available" fall down below the button.
-    float: none;
-
-    margin: 0;
-    padding: 0;
+    background: none;
+    &:before {
+      display: none;
+    }
 
     [type="submit"] {
+      float: none;
+      margin: 0;
+      padding: 0;
       @include button($red, false);
     }
   }
